# lazy-koala

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE.md  Lazy_Koala_POC.ipynb  Lazy_Koala_POC_with_prod_data.ipynb  README.md
.github/workflows/: build-controller.yaml  build-gazer.yaml  build-inspector.yaml  build-sherlock.yaml  publish.yaml  release.yaml
Project Proposal/: acronym.tex  cover-page.tex  main.tex  preamble.tex  references.bib
Project Proposal/sections/: background.tex  deliverables.tex  introduction.tex  problem.tex  project-scope.tex  related-work.tex  requirement.tex  work-plan.tex
charts/lazy-koala/: Chart.yaml  values.yaml
control-plane/: Makefile  PROJECT  go.mod  main.go
control-plane/controllers/: inspector_controller.go  suite_test.go
documentation/: .gitignore
documentation/PSPD/: acronym.tex  cover-page.tex  main.tex  preamble.tex  references.bib
documentation/proposal/: acronym.tex  preamble.tex  (+1 more)
gazer/: Dockerfile  bpf.c  build.sh  config.py  console.py  deployment.yaml  gazer.py  main.py  service.yaml  sock_state.c  syn_backlog.c
inspector/: .gitignore  Dockerfile  deployment.yaml  go.mod  main.go
proposal/: .gitignore  acronym.tex  cover-page.tex  main.tex  references.bib
proxy/: main.go
scripts/: .gitignore  data-exporter.py  loadTemplete.py  profiler.py  usage_data.csv
sherlock/: .gitignore  Cargo.toml  Dockerfile  deployment.yaml  requirements.txt  scraper.py  visualize.ipynb
sherlock/src/: inference.rs  main.rs  query.rs
sherlock/training/: Sherlock.ipynb
ui/: .env  package-lock.json  package.json
(+254 files in other folders)
