[package]
name = "sherlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = "0.13.0"
lazy_static = "1.4.0"
hyper = { version = "0.14.17", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
prometheus-http-query = "0.4.0"
chrono = "0.4.19"
smartcore = "0.2.0"
slice-of-array = "0.3.1"